<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="notifications_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_vibrate"
        android:title="@string/pref_title_vibrate" />

    <EditTextPreference
        android:key="name"
        android:title="@string/pref_title_display_name"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:maxLength="30"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="show_dialog_error"
        android:title="@string/preference_confirm_error_dialog" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="show_dialog_invite"
        android:title="@string/preference_confirm_invite_dialog" />

</PreferenceScreen>