<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:visibility="visible"
        android:id="@+id/not_name"
        android:singleLine="true"
        android:lines="1"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/theme_primary_accent"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_launcher"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />


    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:maxLength="30"
                android:singleLine="true"
                android:lines="1"
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_nickname_or_name" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/wizard_select_account"
            android:id="@+id/textView" />

        <android.support.v7.widget.AppCompatButton
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:id="@+id/bt_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Selecionar conta"
            style="@style/AppButton"
            />
        <TextView
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/holo_red_dark"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/wizard_email_required"
            android:id="@+id/tv_choose_error" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/bt_confirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirmar"
        style="@style/AppButton"
        />




</RelativeLayout>

